PBI-3: Handle login feature and authority all request with access token - Using Spring security - JWT token

--- a/UsersService/src/main/resources/messages/error_en.properties
+++ b/UsersService/src/main/resources/messages/error_en.properties
@@ -12,3 +12,5 @@ error.validation.user.email.required=VALIDATION-ERROR-0007: Email cannot be null
 error.validation.user.email.format=VALIDATION-ERROR-0008: Invalid email format. Please provide a valid email address
 
 error.application.emailAlreadyExist=APPLICATION-ERROR-0001: The email already exist. Please provide another email address
+error.application.userNotFound=APPLICATION-ERROR-0002: The user not found. Please try again
+error.application.invalidEmailOrPassword=APPLICATION-ERROR-0003: Invalid email or password. Please try again
