PBI-3: Refactor error code

--- a/UsersService/src/main/resources/messages/error_en.properties
+++ b/UsersService/src/main/resources/messages/error_en.properties
@@ -1,7 +1,7 @@
 # Common error code
-error.common.unauthorized=UNAUTHORIZED-ERROR-0001
-error.common.badRequest=BAD-REQUEST-ERROR-0001
-error.common.unknown=COMMON-ERROR-0001
+error.code.common.unauthorized=UNAUTHORIZED-ERROR-0001
+error.code.common.badRequest=BAD-REQUEST-ERROR-0001
+error.code.common.unknown=COMMON-ERROR-0001
 
 # Validation error message
 error.validation.user.firstName.required=VALIDATION-ERROR-0001: Fist name cannot be null
